; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_send_vmovi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_send_vmovi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.its_device = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.its_vlpi_map* }
%struct.its_vlpi_map = type { i32, i32 }
%struct.its_cmd_desc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, i32, %struct.its_device*, i32 }

@its_build_vmovi_cmd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.its_device*, i64)* @its_send_vmovi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @its_send_vmovi(%struct.its_device* %0, i64 %1) #0 {
  %3 = alloca %struct.its_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.its_vlpi_map*, align 8
  %6 = alloca %struct.its_cmd_desc, align 8
  store %struct.its_device* %0, %struct.its_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.its_device*, %struct.its_device** %3, align 8
  %8 = getelementptr inbounds %struct.its_device, %struct.its_device* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.its_vlpi_map*, %struct.its_vlpi_map** %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = getelementptr inbounds %struct.its_vlpi_map, %struct.its_vlpi_map* %10, i64 %11
  store %struct.its_vlpi_map* %12, %struct.its_vlpi_map** %5, align 8
  %13 = load %struct.its_vlpi_map*, %struct.its_vlpi_map** %5, align 8
  %14 = getelementptr inbounds %struct.its_vlpi_map, %struct.its_vlpi_map* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = getelementptr inbounds %struct.its_cmd_desc, %struct.its_cmd_desc* %6, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 3
  store i32 %15, i32* %17, align 8
  %18 = load %struct.its_device*, %struct.its_device** %3, align 8
  %19 = getelementptr inbounds %struct.its_cmd_desc, %struct.its_cmd_desc* %6, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 2
  store %struct.its_device* %18, %struct.its_device** %20, align 8
  %21 = load i64, i64* %4, align 8
  %22 = getelementptr inbounds %struct.its_cmd_desc, %struct.its_cmd_desc* %6, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i64 %21, i64* %23, align 8
  %24 = load %struct.its_vlpi_map*, %struct.its_vlpi_map** %5, align 8
  %25 = getelementptr inbounds %struct.its_vlpi_map, %struct.its_vlpi_map* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = getelementptr inbounds %struct.its_cmd_desc, %struct.its_cmd_desc* %6, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 8
  %29 = load %struct.its_device*, %struct.its_device** %3, align 8
  %30 = getelementptr inbounds %struct.its_device, %struct.its_device* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* @its_build_vmovi_cmd, align 4
  %33 = call i32 @its_send_single_vcommand(i32 %31, i32 %32, %struct.its_cmd_desc* %6)
  ret void
}

declare dso_local i32 @its_send_single_vcommand(i32, i32, %struct.its_cmd_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
